fix horizontal scrolling attempt 2

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -13,23 +13,17 @@
 
 @media screen and (max-width: 1080px) {
   .footer {
-    margin: 0.5vh 0 0.25vh 12vw;
+    max-width: 282px;
   }
 }
 
 @media screen and (max-width: 430px) {
-  .footer {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-  }
-
   .footer__text {
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
     letter-spacing: 0em;
     text-align: left;
-    margin: 48px 19px 36px;
+    margin: 48px 0 36px;
   }
 }
