--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,9 +1,8 @@
 .page {
   background-color: black;
   color: #fff;
-  margin: 0 5vw 2vw;
   max-width: 100%;
-  overflow-x: hidden;
+  margin: 0 5vw 2vw;
 }
 
 .page__section {
